--- a/comunidad.html
+++ b/comunidad.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Participación Comunitaria - Acción Ambiental</title>
-    <link rel="stylesheet" href="css/comunidad.css">
+    <link rel="stylesheet" href="comunidad.css">
 </head>
 <body>
     <style>
         body {
-            background-image: url("imagenes/fondo.jpeg");
+            background-image: url("fondo.jpeg");
             background-size: cover; /* Para que la imagen cubra todo el fondo */
             background-repeat: no-repeat; /* Para evitar que la imagen se repita */
             background-position: center; /* Para centrar la imagen */
