--- a/comunidad.html
+++ b/comunidad.html
@@ -32,11 +32,11 @@
     <main>
         <section class="content">
             <div class="media">
-                <img src="imagenes/Río.jpg" alt="Voluntariado en acción">
+                <img src="Río.jpg" alt="Voluntariado en acción">
                 <!-- Imagen adicional debajo de la primera -->
-                <img src="imagenes/INTERTEX.Liderazgo-ambiental-2-2.jpg" alt="Limpieza comunitaria">
+                <img src="INTERTEX.Liderazgo-ambiental-2-2.jpg" alt="Limpieza comunitaria">
                 <!-- Otra imagen más abajo -->
-                <img src="imagenes/educacion.jpeg" alt="Educación sobre residuos">
+                <img src="educacion.jpeg" alt="Educación sobre residuos">
             </div>
             <div class="text-content">
                 <h2>¡Únete a las actividades de voluntariado!</h2>
